WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156857
[iOS] <a ping> and <area ping> tests time out
https://bugs.webkit.org/show_bug.cgi?id=156857
Summary
[iOS] <a ping> and <area ping> tests time out
Ryan Haddad
Reported
2016-04-21 11:56:35 PDT
Tests added with <
https://trac.webkit.org/changeset/199822
> time out Regressions: Unexpected timeouts (4) http/tests/navigation/ping-attribute/area-cookie.html [ Timeout ] http/tests/navigation/ping-attribute/area-cross-origin-from-https.html [ Timeout ] http/tests/navigation/ping-attribute/area-cross-origin.html [ Timeout ] http/tests/navigation/ping-attribute/area-same-origin.html [ Timeout ] <
https://build.webkit.org/builders/Apple%20iOS%209%20Simulator%20Release%20WK2%20%28Tests%29/builds/5039
>
Attachments
Layout Tests
(7.28 KB, patch)
2016-04-21 13:22 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews126 for ios-simulator-wk2
(1.38 MB, application/zip)
2016-04-21 14:24 PDT
,
Build Bot
no flags
Details
Patch and Layout Test
(21.60 KB, patch)
2016-08-19 13:44 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Patch and Layout Test
(21.61 KB, patch)
2016-08-19 14:43 PDT
,
Daniel Bates
simon.fraser
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews126 for ios-simulator-elcapitan-wk2
(758.22 KB, application/zip)
2016-08-19 16:55 PDT
,
Build Bot
no flags
Details
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2016-04-21 12:35:06 PDT
Skipped tests in
http://trac.webkit.org/projects/webkit/changeset/199826
Daniel Bates
Comment 2
2016-04-21 13:22:34 PDT
Created
attachment 276949
[details]
Layout Tests Speculative patch.
Darin Adler
Comment 3
2016-04-21 13:50:01 PDT
Comment on
attachment 276949
[details]
Layout Tests View in context:
https://bugs.webkit.org/attachment.cgi?id=276949&action=review
> LayoutTests/http/tests/navigation/ping-attribute/resources/utilities.js:39 > + if (testRunner.runUIScript && window.TouchEvent)
Why the window.TouchEvent check? So non-obvious that I think it needs a comment explaining the rationale. Also might want to do '"TouchEvent" in window' instead.
Build Bot
Comment 4
2016-04-21 14:24:22 PDT
Comment on
attachment 276949
[details]
Layout Tests
Attachment 276949
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/1197941
New failing tests: http/tests/navigation/ping-attribute/anchor-same-origin.html http/tests/navigation/ping-attribute/area-same-origin.html http/tests/navigation/ping-attribute/area-cross-origin.html http/tests/navigation/ping-attribute/anchor-cross-origin.html http/tests/navigation/ping-attribute/anchor-cookie.html http/tests/navigation/ping-attribute/anchor-cross-origin-from-https.html http/tests/navigation/ping-attribute/area-cookie.html http/tests/navigation/ping-attribute/area-cross-origin-from-https.html
Build Bot
Comment 5
2016-04-21 14:24:24 PDT
Created
attachment 276960
[details]
Archive of layout-test-results from ews126 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews126 Port: ios-simulator-wk2 Platform: Mac OS X 10.10.5
Daniel Bates
Comment 6
2016-08-19 13:44:40 PDT
Created
attachment 286473
[details]
Patch and Layout Test
Daniel Bates
Comment 7
2016-08-19 14:43:39 PDT
Created
attachment 286484
[details]
Patch and Layout Test
Build Bot
Comment 8
2016-08-19 16:55:36 PDT
Comment on
attachment 286484
[details]
Patch and Layout Test
Attachment 286484
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/1901015
New failing tests: http/tests/navigation/ping-attribute/anchor-same-origin.html http/tests/navigation/ping-attribute/area-same-origin.html http/tests/navigation/ping-attribute/area-cross-origin.html http/tests/navigation/ping-attribute/anchor-cross-origin.html http/tests/navigation/ping-attribute/anchor-cookie.html http/tests/navigation/ping-attribute/anchor-cross-origin-from-https.html http/tests/navigation/ping-attribute/area-cookie.html http/tests/navigation/ping-attribute/area-cross-origin-from-https.html
Build Bot
Comment 9
2016-08-19 16:55:40 PDT
Created
attachment 286497
[details]
Archive of layout-test-results from ews126 for ios-simulator-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews126 Port: ios-simulator-elcapitan-wk2 Platform: Mac OS X 10.11.5
Daniel Bates
Comment 10
2016-08-22 09:03:35 PDT
(In reply to
comment #9
)
> Created
attachment 286497
[details]
> Archive of layout-test-results from ews126 for ios-simulator-elcapitan-wk2 > > The attached test failures were seen while running run-webkit-tests on the > ios-sim-ews. > Bot: ews126 Port: ios-simulator-elcapitan-wk2 Platform: Mac OS X 10.11.5
All of these tests pass on my local machine. I'm going to land this patch and watch the bots. Additional remarks: The EWS failure log looks weird for ios-sim. Looking at <
https://webkit-queues.webkit.org/results/1901174
>, run-webkit-tests error'ed out twice "Failed to run "['Tools/Scripts/run-webkit-tests', '--release', '--ios-simulator', '--no-new-test-results', '--no-show-results', '--exit-after-n-failures=30', '--quiet', '--skip-failing-tests']" exit_code: 8". And these error messages are interspersed between the output of a layout test run o_O.
Daniel Bates
Comment 11
2016-08-22 09:15:25 PDT
Committed
r204720
: <
http://trac.webkit.org/changeset/204720
>
Daniel Bates
Comment 12
2016-08-22 14:38:02 PDT
Fixed JavaScript TypeErrors in <
https://trac.webkit.org/changeset/204731
>. As it turns out the tests do not run in WebKit2 for iOS when built with the public iOS SDK because touch events are not supported. Skipped the tests in <
https://trac.webkit.org/changeset/204738
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug