[iOS] <a ping> and <area ping> tests time out https://bugs.webkit.org/show_bug.cgi?id=156857

Reviewed by Simon Fraser.

Source/WebCore:

Export HTMLAreaElement::imageElement() so that we can make use of it in WebKit2.

* html/HTMLAreaElement.h:

Source/WebKit2:

Support single tapping on an HTML area element in WebKit2 just as we do in Legacy WebKit.

WebKit2 commits to clicking a "clickable" DOM node on a single tap only if it has a
renderer. An HTML area element represents a hyperlink in an image map and does not have
a renderer.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::sendTapHighlightForNodeIfNecessary): Compute the tap highlight with respect
to the renderer for the image map associated with the tapped HTML area element (if it has one).
(WebKit::WebPage::commitPotentialTap): Allow committing a potential tap on an HTML area element.

LayoutTests:

Update test to use work in WebKitTestRunner and unskip the tests.

Also remove some unused files.

* http/tests/navigation/ping-attribute/anchor-cross-origin-from-https.html: Include external JavaScript
script resources/utilities.js and write code in terms of clickElement(). Additionally, add HTML5 doctype
tag and put <head> on its own line so as to be consistent with the placement of </head> on its own line.
* http/tests/navigation/ping-attribute/anchor-cross-origin.html: Ditto.
* http/tests/navigation/ping-attribute/anchor-same-origin.html: Ditto.
* http/tests/navigation/ping-attribute/resources/check-ping.php: Removed.
* http/tests/navigation/ping-attribute/resources/delete-ping.php: Removed.
* http/tests/navigation/ping-attribute/resources/ping-file-path.php: Removed.
* http/tests/navigation/ping-attribute/resources/save-Ping.php: Removed.
* http/tests/navigation/ping-attribute/resources/utilities.js:
(clearLastPingResultAndRunTest):
(clickElement): Make use of UIScriptController to click the element via a tap on platforms that
support touch events and implement UIScriptController (window.uiController).
* platform/ios-simulator-wk2/TestExpectations: Unskip ping-attribute tests.
* platform/ios-simulator/TestExpectations: Ditto.

Canonical link: https://commits.webkit.org/179183@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204720 268f45cc-cd09-0410-ab3c-d52691b4dbfc