LayoutTests/http/tests/navigation/ping-attribute/resources/delete-ping.php
@@ -1,5 +1,0 @@
-<?php
-require_once 'ping-file-path.php';
-
-unlink($pingFilePath);
-?>
